--- a/templates/home.html
+++ b/templates/home.html
@@ -1,48 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <title>prince dev careers</title>
     <style>
-      h1{
-        font-size: 40px;
-        font-family: Roboto;
-        font-weight: normal;
-        color: rgb(100,100,100);
-        text-align: center;
-      }
       #banner{
-        width: 100%;
         height: 360px;
+        width: 100%;
         object-fit: cover;
-      }
-      h2{
-        font-family: Roboto;
-        font-size: 32px;
-        color: rgb(100,100,100);
-        text-align: center;
-        font-weight: normal;
-      }
-      .bodytext{
-        font-family: Roboto;
-        color: rgb(80,80,80);
-      }
-      #container{
-        max-width: 720px;
-        margin: 0 auto;
       }
     </style>
   </head>
   <body>
-    <div id="container">
-      <h1>Prince dev carees</h1>
-      <img id="banner" src="{{ url_for('static', filename='ban.png') }}" alt="My Image" height="320px">
-      <h2>About Prince</h2>
-      <p class="bodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <h2>Open positions</h2>
-      <p class="bodytext">TODO - Show the jobs here</p>
-      <div style="text-align:center;">
-        <button>Contact us</button>
-        <p>Copyright 2024 - Prince Gnamin</p>
+    <div class="container">
+      <h1 class="text-center mt-4 mb-4">Prince dev carees</h1>
+      <img class="img-fluid" id="banner" src="{{ url_for('static', filename='ban.png') }}" alt="My Image" height="320px">
+      <h2 class="text-center mt-4 mb-4">About Prince</h2>
+      <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h2 class="text-center">Open positions</h2>
+      <p>TODO - Show the jobs here</p>
+      <div>
+        {%for job in jobs%}
+          {%include 'jobitem.html' %}
+        {%endfor%}
+      </div>
+      <div class="text-center">
+        <button class="btn btn-primary btn-lg"">Contact us</button>
+        <p class="mt-4"">Copyright 2024 - Prince Gnamin</p>
       </div>
       
     </div>
